--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,14 +6,15 @@
 <body>
 
   <!-- ナビゲーションバー -->
-  <nav class="navbar">
-    <ul>
-      <li><a href="/">ホーム</a></li>
-      <li><a href="/about">サイトについて</a></li>
-      <li><a href="/blog">ブログ</a></li>
-      <li><a href="/contact">お問い合わせ</a></li>
-    </ul>
-  </nav>
+<nav class="navbar">
+  <ul>
+    <li><a href="{{ site.baseurl }}/">ホーム</a></li>
+    <li><a href="{{ site.baseurl }}/about/">サイトについて</a></li>
+    <li><a href="{{ site.baseurl }}/blog/">ブログ</a></li>
+    <li><a href="{{ site.baseurl }}/contact/">お問い合わせ</a></li>
+  </ul>
+</nav>
+
 
   <main>
     {{ content }}
