--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,9 @@
   <!-- ナビゲーションバー -->
 <nav class="navbar">
   <ul>
-    <li><a href="{{ site.baseurl }}/">ホーム</a></li>
-    <li><a href="{{ site.baseurl }}/about/">サイトについて</a></li>
-    <li><a href="{{ site.baseurl }}/blog/">ブログ</a></li>
-    <li><a href="{{ site.baseurl }}/contact/">お問い合わせ</a></li>
+    <li><a href="/">ホーム</a></li>
+    <li><a href="/about/">サイトについて</a></li>
+    <li><a href="/contact/">お問い合わせ</a></li>
   </ul>
 </nav>
 
