--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,15 @@
 <head>
   {% include head.html %}
 </head>
+
 <body>
+  <header class="header">
+    <h1>Marvel Snap 日本版情報サイト</h1>
+  </header>
+
+  <!-- ここにメインコンテンツを追加 -->
+
+
 
   <!-- ナビゲーションバー -->
 <nav class="navbar">
