--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,8 @@
 <html lang="ja">
 <head>
   {% include head.html %}
+  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+
 </head>
 
 <body>
