--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
     <li><a href="/">ホーム</a></li>
     <li><a href="/about/">サイトについて</a></li>
     <li><a href="/contact/">お問い合わせ</a></li>
+    <li><a href="{{ site.baseurl }}/about/">サイトについて</a></li>
+　　<li><a href="{{ site.baseurl }}/contact/">お問い合わせ</a></li>
+
   </ul>
 </nav>
 
