--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
     <li><a href="/contact/">お問い合わせ</a></li>
     <li><a href="{{ site.baseurl }}/about/">サイトについて</a></li>
 　　<li><a href="{{ site.baseurl }}/contact/">お問い合わせ</a></li>
+    <li><a href="{{ site.baseurl }}/schedule/">スケジュール</a></li>
 
   </ul>
 </nav>
