--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,66 +1,5 @@
-@import "minima";  // Minimaのスタイルを継承
+---
+---
 
-// Marvel Snap風のカスタムスタイル
-$primary-color: #612fff; // Marvel Snapの紫っぽい色
-$background-color: #0d1117; // ダークモード風
-$text-color: #ffffff; // 白文字
-
-body {
-  background-color: $background-color;
-  color: $text-color;
-  font-family: "Arial", sans-serif;
-}
-
-a {
-  color: $primary-color;
-  text-decoration: none;
-}
-
-a:hover {
-  color: lighten($primary-color, 20%);
-}
-
-// ヘッダーのスタイル
-.header {
-  background: $primary-color;
-  padding: 10px;
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
-  color: white;
-}
-
-// フッターのスタイル
-.footer {
-  background: $primary-color;
-  padding: 10px;
-  text-align: center;
-  color: white;
-}
-
-// ナビゲーションバーのスタイル
-.navbar {
-  background: #333;
-  padding: 10px 0;
-  text-align: center;
-}
-
-.navbar ul {
-  list-style: none;
-  padding: 0;
-}
-
-.navbar ul li {
-  display: inline;
-  margin: 0 15px;
-}
-
-.navbar ul li a {
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.navbar ul li a:hover {
-  text-decoration: underline;
-}
+@import "minima";  // Minima のスタイルを継承
+@import "custom";  // カスタムスタイルを適用
