--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  {% include head.html %}
-  <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{{ page.title }}</title>
+
+  <!-- Jekyll の SCSS を適用 -->
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
+  
 </head>
 
 <body>
