--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,7 @@
 <nav class="navbar">
   <ul>
     <li><a href="/">ホーム</a></li>
-    <li><a href="/about/">サイトについて</a></li>
-    <li><a href="/contact/">お問い合わせ</a></li>
-    <li><a href="{{ site.baseurl }}/about/">サイトについて</a></li>
+    <li><a href="{{ site.baseurl }}/">ホーム</a></li>
 　　<li><a href="{{ site.baseurl }}/contact/">お問い合わせ</a></li>
     <li><a href="{{ site.baseurl }}/schedule/">スケジュール</a></li>
 
