--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Marvel Snap 日本版情報サイト</title>
+<title>マーベルスナップ攻略ブログ｜最強デッキ・イベント最新情報まとめ</title>
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
