--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,8 @@
 
 <body>
   <header class="header">
-    <h1>Marvel Snap 日本版情報サイト</h1>
+    <h1>MARVEL SNAP INFO</h1>
+    <h1>マベスナ情報局</h1>
   </header>
 
   
