--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
 
 <body>
   <header class="header">
-    <h1>MARVEL SNAP INFO</h1>
-    <h1>マベスナ情報局</h1>
+     <div class="logo">MARVEL SNAP INFO</div>
+     <h1>マベスナ情報局</h1>
   </header>
 
   
