--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -7,8 +7,8 @@ $background-color: #0d1117;
 $text-color: #ffffff;
 
 body {
-  background-color: $background-color;
-  color: $text-color;
+  background-color: $background-color;  // 背景色
+  color: $text-color;  // 文字色（白）
   font-family: 'Bebas Neue', sans-serif;
 }
 
