--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,8 @@
 <title>{{ page.title }} | {{ site.title }}</title>
 
 <!-- CSSを適用 -->
-<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+<!--<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">-->
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
 
 <!-- Google Fonts（Bebas Neue を適用）-->
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
