--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
-<footer>
-  <p>&copy; 2025 Marvel Snap 情報局. All Rights Reserved.</p>
+
+
+<footer class="footer">
+  <p>&copy; 2025 Marvel Snap 情報局</p>
 </footer>
